--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>XMall商城</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="wap-font-scale" content="no">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
-  <link rel="shortcut icon " type="images/x-icon" href="/static/images/M.png">
-</head>
-<body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>XMall商城</title><meta name=keywords content=""><meta name=description content=""><meta http-equiv=X-UA-Compatible content="IE=Edge"><meta name=wap-font-scale content=no><link rel="shortcut icon " type=images/x-icon href=/static/images/M.png><link href=./static/css/app.1977e54ad8ed7fd153813a4bf003f59b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.ade4a1dafb975ca77e93.js></script><script type=text/javascript src=./static/js/vendor.72973cdb1899de144f06.js></script><script type=text/javascript src=./static/js/app.ad0d155738fe938e956a.js></script></body></html>
